# 13f-tools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  monitor_config.example.yml  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  development.md
src/sec13f_analyzer/: __init__.py  analyzer.py  cli.py  config.py  data_fetcher.py  exporter.py  logging_config.py  models.py  monitor.py  monitor_config.py  notifier.py  visualizer.py
tests/: __init__.py  conftest.py  test_amendment_handling.py  test_analyzer.py  test_cli.py  test_config.py  test_data_fetcher.py  test_exporter.py  test_integration.py  test_logging_config.py  test_models.py  test_monitor.py  test_monitor_config.py  test_notifier.py  test_sec_access.sh  test_visualizer.py
tests/test_data/: sample_13f.xml  search_results.html
