[build-system]
requires = ["poetry-core>=1.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sec13f-analyzer"
version = "0.1.1"
description = "SEC 13F持仓分析工具，用于追踪机构投资者持仓变动"
authors = ["Vincent Duan <vincent.duan95@outlook.com>"]
maintainers = ["Vincent Duan <vincent.duan95@outlook.com>"]
repository = "https://github.com/Duan-JM/ValueAnalyze.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["SEC", "13F", "holdings", "analysis", "finance"]
include = ["LICENSE", "README.md"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
sec13f-cli = "sec13f_analyzer.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
loguru = "^0.7.3"
click = "^8.1.7"
numpy = "^2.2.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.4"
python-dateutil = "^2.8.2"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
responses = "^0.24.1"
requests-mock = "^1.12.1"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "integration: 标记集成测试",
    "unit: 标记单元测试",
    "slow: 标记慢速测试",
]
addopts = [
    "--import-mode=importlib",
    "-v",
]
